syntax = "proto3";
package validate.v1;

import "google/protobuf/any.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "proto/validate/v1";

message CheckRequest {
  string id = 1;
  map<string, google.protobuf.Any> variables = 2;
}

message CheckResponse {
  bool is_valid = 1;
  string message = 2;
}

service ValidateService {
  rpc Check(CheckRequest) returns (CheckResponse) {
    option (google.api.http) = {
      post: "/v1/check"
      body: "*"
    };
  }
}